--- a/Contatos.html
+++ b/Contatos.html
@@ -8,24 +8,25 @@
     <link rel="stylesheet" href="index.css">
 </head>
 
-<nav id="menu-h">
-    <ul>
-        <li><a href="index.html">FocAI</a></li>
-        <li><a href="educa-tech.html">Educa Tech</a></li>
-        <li><a href="Recursos-e-ferramentas.html">Recursos e ferramentas</a></li>
-        <li><a href="Contatos.html">Contatos</a></li>
+<header>
+  <ul>
+    <li><a href="index.html">FocAI</a></li>
+    <li><a href="educa-tech.html">Educa Tech</a></li>
+    <li><a href="Recursos-e-ferramentas.html">Recursos e ferramentas</a></li>
+    <li><a href="Contatos.html">Contatos</a></li>
 
-        <label for="link1" class="botao-principal">Login/Cadastro</label>
-        <input type="checkbox" id="link1" class="links-checkbox">
-        <input type="checkbox" id="link2" class="links-checkbox">
-      <div class="links">
-        <label for="link1" class="links-label link1"><a href="Cadastro.html">Professor</a></label>
-        <label for="link2" class="links-label link1"><a href="cadastro-aluno.html">Aluno</a></label>
-      </div>
-    </ul>
-</nav>
+    <label for="link1" class="botao-principal">Login/Cadastro</label>
+    <input type="checkbox" id="link1" class="links-checkbox">
+    <input type="checkbox" id="link2" class="links-checkbox">
+  <div class="links">
+    <label for="link1" class="links-label link1"><a href="login.html">Professor</a></label>
+    <label for="link2" class="links-label link1"><a href="login.html">Aluno</a></label>
+  </div>
+</ul>
+</header>
 
 <body>
+  <div class="container">
     <h1>Contato</h1>
     <img id="img-contato"  src="img/img-contato.jpeg" alt="Contato-FocAI">
     <form action="" autocomplete="off">
@@ -46,6 +47,8 @@
            </div>
         </fieldset>
     </form>
+  </div>
+   
 </body>
 <footer>
   <p>&copy; 2024 EducaTech</p>
