--- a/Recursos-e-ferramentas.html
+++ b/Recursos-e-ferramentas.html
@@ -8,25 +8,25 @@
     <link rel="stylesheet" href="index.css">
 
 </head>
-
-<nav id="menu-h">
-    <ul>
-        <li><a href="index.html">FocAI</a></li>
-        <li><a href="educa-tech.html">Educa Tech</a></li>
-        <li><a href="Recursos-e-ferramentas.html">Recursos e ferramentas</a></li>
-        <li><a href="Contatos.html">Contatos</a></li>
-        
-        <label for="link1" class="botao-principal">Login/Cadastro</label>
-        <input type="checkbox" id="link1" class="links-checkbox">
-        <input type="checkbox" id="link2" class="links-checkbox">
-      <div class="links">
-        <label for="link1" class="links-label link1"><a href="Cadastro.html">Professor</a></label>
-        <label for="link2" class="links-label link1"><a href="cadastro-aluno.html">Aluno</a></label>
-      </div>
-    </ul>
-</nav>
-<body>
+<header>
+  <ul>
+    <li><a href="index.html">FocAI</a></li>
+    <li><a href="educa-tech.html">Educa Tech</a></li>
+    <li><a href="Recursos-e-ferramentas.html">Recursos e ferramentas</a></li>
+    <li><a href="Contatos.html">Contatos</a></li>
     
+    <label for="link1" class="botao-principal">Login/Cadastro</label>
+    <input type="checkbox" id="link1" class="links-checkbox">
+    <input type="checkbox" id="link2" class="links-checkbox">
+  <div class="links">
+    <label for="link1" class="links-label link1"><a href="login.html">Professor</a></label>
+    <label for="link2" class="links-label link1"><a href="login.html">Aluno</a></label>
+  </div>
+</ul>
+</header>
+
+<body>
+  <div class="container">
     <h1>Recursos e Ferramentas</h1>
     <h2>A tríade IA de Conhecimento</h2>
     <p>A Tríade IA de Conhecimento é uma abordagem revolucionária no campo da educação, integrando inteligência artificial, análise de dados e aprendizado personalizado para criar um ambiente educacional mais eficaz e adaptativo. Nossa tecnologia avançada permite a identificação de padrões de aprendizado e necessidades individuais dos alunos, fornecendo insights valiosos para professores e criando estratégias de ensino sob medida. Com a Tríade IA de Conhecimento, estamos transformando a maneira como o conhecimento é adquirido e compartilhado, promovendo uma experiência educacional mais enriquecedora e acessível.
@@ -36,9 +36,10 @@
     <h2>Aplicativo</h2>
     <p>O aplicativo Focaí é um companheiro indispensável para alunos que desejam otimizar seu tempo de estudo e melhorar seu desempenho acadêmico. Disponível para dispositivos móveis, o Focaí oferece funcionalidades como lembretes personalizados, sessões de estudo guiadas e técnicas de gerenciamento de tempo baseadas em pesquisas científicas. Com uma interface amigável e intuitiva, o aplicativo ajuda os estudantes a manter o foco e a disciplina, garantindo que cada minuto de estudo seja produtivo e eficaz</p>
     <img id="img-app" src="img/img-app.jpeg" alt="Aplicativo FocAI">
-    <h2>Pulseira Auxiliar no Ensino</h2>
+    <h2>Pulseira Inteligente: Auxiliar no Ensino</h2>
     <p>A pulseira auxiliar no ensino é uma inovação tecnológica projetada para apoiar alunos no processo de aprendizagem, especialmente aqueles com TDAH. Equipado com sensores avançados, o dispositivo monitora os níveis de atenção e concentração do usuário, fornecendo feedback em tempo real. Conectada à plataforma Focaí, a pulseira oferece sugestões personalizadas para melhorar o foco e ajustar as atividades de estudo conforme necessário. Esta ferramenta única transforma o aprendizado, proporcionando um suporte contínuo e adaptativo que ajuda os alunos a alcançar seu pleno potencial.</p>
-
+  </div>  
+   
 </body>
     <footer>
         <p>&copy; 2024 EducaTech</p>
