--- a/conf-prof.html
+++ b/conf-prof.html
@@ -11,9 +11,9 @@
     <header>
         <nav id="menu-h-perfil">
             <ul>
-                <li><a href="perfil.html">Perfil</a></li>
+                <li><a href="perfil-prof.html">Perfil</a></li>
                 <li><a href="#">Painel de Controle</a></li>
-                <li><a href="configuracoes.html">Configurações</a></li>
+                <li><a href="conf-prof.html">Configurações</a></li>
                 <li><a href="Forum-prof.html">Fórum</a></li>
                 <li><a href="index.html">Sair</a></li>
             </ul>
