--- a/educa-tech.html
+++ b/educa-tech.html
@@ -6,31 +6,33 @@
     <title>EducaTech</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
-    <nav id="menu-h">
-      <ul>
-        <li><a href="index.html">FocAI</a></li>
-        <li><a href="educa-tech.html">Educa Tech</a></li>
-        <li><a href="Recursos-e-ferramentas.html">Recursos e ferramentas</a></li>
-        <li><a href="Contatos.html">Contatos</a></li>
-         <label for="link1" class="botao-principal">Login/Cadastro</label>
-             <input type="checkbox" id="link1" class="links-checkbox">
-             <input type="checkbox" id="link2" class="links-checkbox">
-           <div class="links">
-             <label for="link1" class="links-label link1"><a href="Cadastro.html">Professor</a></label>
-             <label for="link2" class="links-label link1"><a href="cadastro-aluno.html">Aluno</a></label>
-           </div>
-        </ul>
-    </nav>
+<header>
+    <ul>
+      <li><a href="index.html">FocAI</a></li>
+      <li><a href="educa-tech.html">Educa Tech</a></li>
+      <li><a href="Recursos-e-ferramentas.html">Recursos e ferramentas</a></li>
+      <li><a href="Contatos.html">Contatos</a></li>
+       <label for="link1" class="botao-principal">Login/Cadastro</label>
+           <input type="checkbox" id="link1" class="links-checkbox">
+           <input type="checkbox" id="link2" class="links-checkbox">
+         <div class="links">
+           <label for="link1" class="links-label link1"><a href="login.html">Professor</a></label>
+           <label for="link2" class="links-label link1"><a href="login.html">Aluno</a></label>
+         </div>
+      </ul>
 
+
+</header>
+
+
+<body>
+   <div class="container"> 
     <h1>EducaTech</h1>
-    <section id="apr-educa">
-        <p>Tendo como foco a responsabilidade com a Educação, Evolução Pessoal e Profissional, prezando pela Diversidade e Inovação, a EducaTech é uma empresa multinacional no ramo de tecnologia educacional, focada na criação de softwares para um melhor suporte a alunos e professores. 
-            Tecnologia na sala de aula: Ctrl+Alt+Ensinar!</p>
-    </section>
-   
+    <p>Tendo como foco a responsabilidade com a Educação, Evolução Pessoal e Profissional, prezando pela Diversidade e Inovação, a EducaTech é uma empresa multinacional no ramo de tecnologia educacional, focada na criação de softwares para um melhor suporte a alunos e professores. 
+      Tecnologia na sala de aula: Ctrl+Alt+Ensinar!</p>
+
       <section id="img-educa">
-        <img src="img/educa_tech.jpeg" alt="EducaTech">
+        <img id="img-educa" src="img/educa_tech.jpeg" alt="EducaTech">
         <P>Multinacional no ramo da Tecnologia na Educação.</P>
     </section> 
 
@@ -40,7 +42,8 @@
         <p>Responsabilidade com a educação,evolução pessoal e profissional,prezar pelo respeito e diversidade e inovar.</p>
     <h2>O TDAH é a faísca que acende a chama de projetos revolucionários</h2>
         <p>Reconhecido mundialmente, o TDAH (Transtono de Déficit de Atenção e Hiperatividade) vem influenciando os métodos utilizados para atender às necessidades.O Projeto FocAI foi projetado levando em consideração várias características que podem ajudar a maximizar o engajamento e a retenção de informações.</p>
-</body>
+      </div>
+      </body>
 <footer>
     <p>&copy; 2024 EducaTech</p>
 </footer>
